# terrakit

./: .env_template  .gitignore  .secrets.baseline  README.md  mkdocs.yml  pyproject.toml  requirements.txt
docs/: data_connectors.md  download_data.md  index.md
docs/api/data_connectors/: climate_data_store.md
docs/api/data_connectors/collections/: cordex_domains.md  era5_domains.md
docs/examples/: labels_to_data.ipynb  terrakit_cli.ipynb  terrakit_download.ipynb  terrakit_download_cds.ipynb
docs/examples/test_forest_classes_vector/: 2025-06-16_CLASS_0_virgin-forst.geojson  2025-06-16_CLASS_1_other-forest-1.geojson  2025-06-16_CLASS_1_other-forest-2.geojson
docs/examples/test_ship_labels/: sentinel_aws_sentinel-2-l2a_2025-04-02_labels_geojson.geojson
scripts/: check_header.py
terrakit/: __init__.py  terrakit.py
terrakit/download/: collections.json  download_data.py  geodata_utils.py
terrakit/download/data_connectors/: climate_data_store.py  connector_template.py  nasa_earthdata.py  sentinel_aws.py  sentinelhub.py
terrakit/download/data_connectors/cds_utils/: cordex_domains.json  cordex_utils.py  derived-era5-single-levels-daily-statistics_constraints.json  projections-cordex-domains-single-levels_constraints.json
terrakit/general_utils/: plotting.py
terrakit/transform/: labels.py
terrakit/validate/: data_connector.py  helpers.py
tests/component_tests/download/: conftest.py  test_geodata_utils.py
tests/component_tests/download/data_connectors/: test_climate_data_store.py
tests/component_tests/transform/: conftest.py  test_labels.py  test_labels_invalid_params.py
tests/integration_tests/: cds.py
tests/resources/component_test_data/download/: dummy.tif  terrakit_curated_dataset_all_bboxes.dbf  terrakit_curated_dataset_all_bboxes.shp  terrakit_curated_dataset_all_bboxes.shx  terrakit_curated_dataset_labels.dbf  terrakit_curated_dataset_labels.shp  terrakit_curated_dataset_labels.shx
tests/resources/component_test_data/store/: dummy_2025-01-01_imputed_0.data.tif
tests/resources/component_test_data/transform/: sentinel_aws_sentinel-2-l2a_2025-04-23_imputed.tif  sentinelhub_s2_l2a_2025-04-23_imputed.tif  sentinelhub_s2_l2a_2025-04-23_imputed_labels.tif
tests/resources/scripts/: generate_cds_test_data.py
tests/resources/sentinel_aws/: aws_test_data.tif
